# HeartLake

./: .env.example  .env.server-lite.example  .gitignore  .mcp.json  ADMIN_AI_GAP_ANALYSIS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  README.md  REVIEW_REPORT.md  docker-compose.server-lite.yml  docker-compose.yml  temp-1998.rdb
admin/: .dockerignore  Dockerfile  (+14 more)
backend/: .dockerignore  .env.example  CMakeLists.txt  Dockerfile  README.md  config.docker.json  config.json  config.json.example  start-docker.sh  start.docker.sh  start.sh  stop.sh
backend/cmake/: FindOnnxRuntime.cmake
backend/include/application/: ApplicationServiceFactory.h  FriendApplicationService.h  InteractionApplicationService.h  StoneApplicationService.h  UserApplicationService.h
backend/include/config/: ConfigManager.h
backend/include/infrastructure/: ArchitectureBootstrap.h
backend/include/middleware/: RateLimiter.h
backend/include/utils/: AdminConfigStore.h  AdminRealtimeNotifier.h  AwsSigner.h  BusinessRules.h  CircuitBreaker.h  CommunityAtmosphereGuard.h  ContentFilter.h  CorsUtil.h  E2EEncryption.h  EmotionManager.h  EnvUtils.h  ErrorCode.h  HighPerformance.h  IdGenerator.h  IdentityShadowMap.h  MetricsCollector.h  MoodUtils.h  PasetoUtil.h  PasswordUtil.h  PsychologicalRiskAssessment.h  RBACManager.h  RealtimeEvent.h  RecoveryKeyGenerator.h  RequestHandler.h  RequestHelper.h  ResponseUtil.h  SecurityAuditScore.h  SecurityLogger.h  StoneCacheKeys.h  StructuredLogger.h  Telemetry.h  TransactionManager.h  Validator.h
backend/migrations/: 001_users.sql  002_stones.sql  003_social.sql  003_stone_embeddings.sql  004_guardian_system.sql  004_interactions.sql  005_ai_system.sql  006_guardian.sql  007_admin.sql  008_notifications.sql  009_consultation.sql  009_consultation_e2ee.sql  010_data_export.sql  011_notifications.sql  011_performance_schema_hardening.sql  012_optimize_indexes.sql  012_users_username_compat.sql  013_schema_fixes.sql  013_temp_friends.sql  014_fix_schema_mismatch.sql  014_stones_embedding_vector.sql  015_add_vip_columns.sql  015_runtime_schema_hotfix.sql  016_admin_runtime_tables.sql  016_user_similarity.sql  017_account_schema_alignment.sql  017_add_indexes.sql  018_optimize_missing_indexes.sql  018_user_identity_contract.sql  019_feature_contract_completion.sql  019_fix_schema_columns.sql  020_add_missing_indexes.sql  020_query_path_index_tuning.sql  021_auth_refresh_sessions.sql  021_edge_ai_system.sql  022_fix_foreign_key_references.sql  023_create_user_emotion_profile_view.sql  024_create_recommendation_tables.sql  025_lake_god_messages.sql  026_add_ripple_unique_constraint.sql  (+5 more)
backend/migrations/rollback/: 001_users_down.sql  002_stones_down.sql  003_social_down.sql  004_interactions_down.sql  005_ai_system_down.sql  006_guardian_down.sql  007_admin_down.sql  008_notifications_down.sql  009_consultation_down.sql  010_data_export_down.sql  011_performance_schema_hardening_down.sql  012_users_username_compat_down.sql  013_schema_fixes_down.sql  014_stones_embedding_vector_down.sql  015_runtime_schema_hotfix_down.sql  016_admin_runtime_tables_down.sql  017_account_schema_alignment_down.sql  018_user_identity_contract_down.sql  019_feature_contract_completion_down.sql  020_query_path_index_tuning_down.sql  021_auth_refresh_sessions_down.sql
backend/models/: .gitignore  README.md  sentiment_domain_lexicon.tsv
backend/quic_gateway/: Cargo.toml
backend/quic_gateway/src/: main.rs
backend/scripts/: rollback.sh
backend/src/: main.cpp
backend/src/application/: ApplicationServiceFactory.cpp  FriendApplicationService.cpp  InteractionApplicationService.cpp  StoneApplicationService.cpp  UserApplicationService.cpp
backend/src/config/: ConfigManager.cpp
backend/src/middleware/: RateLimiter.cpp
backend/src/utils/: AdminConfigStore.cpp  AdminRealtimeNotifier.cpp  AwsSigner.cpp  CommunityAtmosphereGuard.cpp  ContentFilter.cpp  E2EEncryption.cpp  EmotionManager.cpp  ErrorCode.cpp  HighPerformance.cpp  IdGenerator.cpp  IdentityShadowMap.cpp  MetricsCollector.cpp  PasetoUtil.cpp  PasswordUtil.cpp  PsychologicalRiskAssessment.cpp  RBACManager.cpp  RealtimeEvent.cpp  RecoveryKeyGenerator.cpp  ResponseUtil.cpp  SecurityAuditScore.cpp  SecurityLogger.cpp  StoneCacheKeys.cpp  StructuredLogger.cpp  Telemetry.cpp  Validator.cpp  ValidatorEnhanced.cpp
backend/tests/: benchmark_edge_ai.cpp  integration_test.cpp  load_test.py  load_test_results.json  stress_test.cpp  test_advanced_embedding.cpp  test_ai_torture.cpp  test_circuit_breaker.cpp  test_circuit_breaker_extended.cpp  test_concurrency_torture.cpp  test_differential_privacy.cpp  test_differential_privacy_extended.cpp  test_dual_memory_rag.cpp  test_dual_memory_rag_extended.cpp  test_edge_ai_engine.cpp  test_edge_ai_engine_extended.cpp  test_emotion_resonance.cpp  test_emotion_resonance_extended.cpp  test_id_generator_extended.cpp  test_psychological_risk_assessment.cpp  test_psychological_risk_extended.cpp  test_security_crypto.cpp  test_security_crypto_extended.cpp  test_security_torture.cpp  test_utils.cpp  test_validator_extended.cpp
backend/tests/controllers/: stone_controller_test.cpp  test_account_controller.cpp  test_admin_controller.cpp  test_consultation_controller.cpp  test_friend_controller.cpp  test_guardian_controller.cpp  test_interaction_controller.cpp  test_paper_boat_controller.cpp  test_recommendation_controller.cpp  test_report_controller.cpp  test_temp_friend_controller.cpp  test_user_controller.cpp  test_vip_controller.cpp
backend/tests/filters/: test_admin_auth_filter.cpp  test_rate_limit_filter.cpp  test_security_audit_filter.cpp
backend/tests/services/: safe_harbor_service_test.cpp  stone_service_test.cpp  test_friend_service.cpp  test_interaction_service.cpp  test_user_service.cpp
backend/tests/utils/: test_admin_config_store.cpp  test_content_filter.cpp  test_e2e_encryption_extended.cpp  test_emotion_manager.cpp  test_paseto_extended.cpp  test_rbac_manager.cpp  test_recovery_key.cpp  test_response_util.cpp  test_security_audit_score.cpp
backend/tests/websocket/: test_websocket_hub.cpp
(+572 files in other folders)
