[package]
name = "heartlake-quic-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
chacha20poly1305 = "0.10"
chrono = { version = "0.4", features = ["clock"] }
futures-util = "0.3"
quinn = { version = "0.11", default-features = true, features = ["rustls"] }
rcgen = "0.13"
redis = { version = "0.27", features = ["tokio-comp"] }
rustls = "0.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.42", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

